change sectiom to section

--- a/forms.html
+++ b/forms.html
@@ -7,11 +7,11 @@
     <title>Document</title>
   </head>
   <body>
-    <sectiom>
+    <section>
       <form action="https://www.google.com/search">
         <input type="himom" name="q" />
         <input type="submit" />
       </form>
-    </sectiom>
+    </section>
   </body>
 </html>
