--- a/forms.html
+++ b/forms.html
@@ -4,14 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>Forms</title>
+    <style></style>
   </head>
   <body>
     <section>
-      <form action="https://www.google.com/search">
-        <input type="himom" name="q" />
-        <input type="submit" />
+      <form>
+        <label for="agree">
+          Do you agree
+        </label>
+
+        <input id="agree" type="checkbox" name="agree" />
+        <label>
+          <input type="email" placeholder="E-mail" name="email" />
+        </label>
+        <p>Tel</p>
+        <input type="tel" />
+        <p>number</p>
+        <input type="number" />
       </form>
+      <h1>HI</h1>
+      <h2>Mom</h2>
     </section>
   </body>
 </html>
